OSEP: partially correct colour needs more contrast #676309

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@
 
 #page-report-embedquestion-activity .que.correctness.partiallycorrect,
 #page-report-embedquestion-index .que.correctness.partiallycorrect {
-    color: #f0ad4e;
+    color: #b25a00;
 }
 
 #page-report-embedquestion-activity .generaltable,
